# meteo-service

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  background_tasks.py  config_loader.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  weather_service.py
