[project]
name = "meteo-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "meteodata-lab[polytope,regrid]>=0.4.0",
    "pyproj<3.7",
    "toml>=0.10.2",
    "uvicorn>=0.34.3",
]
